Mobile view Refactoring

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shubhamsukum.github.io/",
+  "homepage": "https://shubhamsukum.github.io/Pirates-Private-LOVE",
   "name": "love",
   "version": "0.1.0",
   "private": true,
